Bug 151755 - FILESAVE XLS/X: contentless cells at row end are losing their borders on export
Summary: FILESAVE XLS/X: contentless cells at row end are losing their borders on export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Border XLSX
  Show dependency treegraph
 
Reported: 2022-10-25 14:50 UTC by Justin L
Modified: 2023-06-07 17:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Blank Daily Calendar.xlsx: created from a built-in Excel template. (12.69 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-10-25 14:50 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2022-10-25 14:50:14 UTC
Created attachment 183262 [details]
Blank Daily Calendar.xlsx: created from a built-in Excel template.

Starting in LO 7.4, an optimization broke formatting on empty cells at the end of a row. Tracked down to author Luboš Luňák on 2022-02-17 12:08:38 +0100
commit 05259e880db187f6698d6d545504775459d6e96a
   optimize blank cell Excel export (tdf#133749)

Steps to reproduce
1.) open Blank Daily Calendar.xlsx. Notice that ToDo, Errands, and Calls all have the same border formatting.
2.) save in xlsx or xls format and reload in LO or Excel. Notice that Errands and Calls have lost the borders.
Comment 1 Roman Kuznetsov 2022-11-01 19:12:00 UTC
Confirm in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 8dcf53b3d2c0e30317c1e247f01d07ab448ec1ae
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2022-12-19 06:16:14 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c57d113e9ef8608f5690e8707a97879cb4f6a185

tdf#151755 fix export of borders of contentless cells

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-12-19 09:31:42 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c79bd967dc26259115bf2a5f36e60f34575fbd97

tdf#151755 fix export of borders of contentless cells

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-12-19 15:12:54 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8a6851964134915d29cfbcd409ac80dc7f257261

tdf#151755 fix export of borders of contentless cells

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2023-01-24 10:36:21 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard