tdf#151755 fix export of borders of contentless cells

Change-Id: I650aeebb4d021911c1f14d4867c5beee84020155
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143431
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>